remove requirments.txt

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,14 +81,14 @@ jobs:
         with:
           version: ${{ env.CARGO_MAKE_VERSION }}
 
-      - name: Cache pip
-        uses: actions/cache@v2
-        with:
-          path: ${{ env.PIP_CACHE_DIR }}
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements-dev.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-            ${{ runner.os }}-
+      # - name: Cache pip
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: ${{ env.PIP_CACHE_DIR }}
+      #     key: ${{ runner.os }}-pip-${{ hashFiles('requirements-dev.txt') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-pip-
+      #       ${{ runner.os }}-
 
       - name: Run Pip Install
         run: |
@@ -147,19 +147,14 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install -y capnproto libudev-dev
 
-      - name: Run Requirements Generation Check
-        run: |
-          cargo make poetry-export
-          git diff --exit-code
-
-      - name: Cache pip
-        uses: actions/cache@v2
-        with:
-          path: ${{ env.PIP_CACHE_DIR }}
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements-dev.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-            ${{ runner.os }}-
+      # - name: Cache pip
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: ${{ env.PIP_CACHE_DIR }}
+      #     key: ${{ runner.os }}-pip-${{ hashFiles('requirements-dev.txt') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-pip-
+      #       ${{ runner.os }}-
 
       - name: Run Checks
         run: |
@@ -254,14 +249,14 @@ jobs:
         with:
           version: ${{ env.CARGO_MAKE_VERSION }}
 
-      - name: Cache pip
-        uses: actions/cache@v2
-        with:
-          path: ${{ env.PIP_CACHE_DIR }}
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements-dev.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-            ${{ runner.os }}-
+      # - name: Cache pip
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: ${{ env.PIP_CACHE_DIR }}
+      #     key: ${{ runner.os }}-pip-${{ hashFiles('requirements-dev.txt') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-pip-
+      #       ${{ runner.os }}-
 
       - name: Run Pip Install
         run: |
