ignore console_resources

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
         shell: bash
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt-get update && sudo apt-get install -y capnproto libudev-dev pyside2-tools
+              sudo apt-get update && sudo apt-get install -y capnproto libudev-dev
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install capnp llvm
           elif [ "$RUNNER_OS" == "Windows" ]; then
@@ -145,7 +145,7 @@ jobs:
 
       - name: Install Dependencies.
         run: |
-          sudo apt-get update && sudo apt-get install -y capnproto libudev-dev pyside2-tools
+          sudo apt-get update && sudo apt-get install -y capnproto libudev-dev
 
       - name: Cache pip
         uses: actions/cache@v2
@@ -232,8 +232,7 @@ jobs:
                 ruby-dev \
                 rubygems \
                 build-essential \
-                libudev-dev \
-                pyside2-tools
+                libudev-dev
               sudo gem install --no-document fpm
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew install capnp llvm
