--- a/Makefile.toml
+++ b/Makefile.toml
@@ -189,7 +189,8 @@ condition = { files_not_exist = [
   "${CARGO_MAKE_WORKSPACE_WORKING_DIRECTORY}/standalone-py/python",
 ] }
 script_runner = "powershell"
-script = { file = "download.ps1" }
+script_extension = "ps1"
+script = '''.\download.ps1'''
 
 [tasks.setup-builder]
 dependencies = ["get-standalone-py"]
